# cert-lgs

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/axiom_stress/: domain.pddl  p01_d002.pddl  p02_d003.pddl  p03_d004.pddl  p04_d005.pddl  p05_d006.pddl  p06_d007.pddl  p07_d008.pddl  p08_d009.pddl  p09_d010.pddl  p10_d011.pddl
benchmarks/ceff_stress/: domain.pddl  p01_f004.pddl  p02_f005.pddl  p03_f006.pddl  p04_f007.pddl  p05_f008.pddl  p06_f009.pddl  p07_f010.pddl  p08_f011.pddl  p09_f012.pddl  p10_f013.pddl
benchmarks/distribution_shift/: domain.pddl  generate_problems.py
benchmarks/logistics_expressive/: domain.pddl  p01_small.pddl  p02_small.pddl  p03_medium.pddl  p04_medium.pddl  p05_large.pddl
benchmarks/mixed_expressive/: domain.pddl  p01.pddl  p02.pddl  p03.pddl  (+12 more)
configs/: adversarial.yaml  default.yaml
docs/: certification_layer_design.md  experiment_protocol.md  novelty_positioning.md
experiments/: aggregate_results.py  generate_figures.py  run_ablations.py  run_adversarial_tests.py  run_baselines.py  run_cert_lgs.py
paper/: main_outline.md  references_seed.bib  theorem_package.md
tests/: test_admissible_bound_checker.py  test_axiom_closure.py  test_bdd_backend.py  test_certifier_adversarial.py  test_gnn_ranker.py  test_hcert.py  test_hcert_integration.py  test_model_factory.py  test_parser.py  test_parser_parameterised.py  test_partition_checker.py  test_pcert.py  test_pruning_checker.py  test_search.py  test_training_loss.py  test_transition_checker.py  test_transition_system.py
(+68 files in other folders)
