[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-lgs"
version = "0.1.0"
description = "Certified Learning-Guided Symbolic Search for Expressive Cost-Optimal Planning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Siva"}]
license = {text = "MIT"}
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "networkx>=3.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "dd>=0.5.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4.0",
  "mypy>=1.8"
]
ml = [
  "torch>=2.1"
]

[project.scripts]
cert-lgs = "cert_lgs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
